# nandu

./: .editorconfig  .gitlab-ci.yml  .ts-for-girrc.js  Nandu.cmb  README.md  eslint.config.js  meson.build  package-lock.json  package.json  tsconfig.json
build-aux/flatpak/: org.redvulps.nandu.json  org.redvulps.tilikum.json~
data/: compose-detail.ui  compose-item.ui  container-item.ui  container-manager.ui  image-item.ui  meson.build  org.redvulps.nandu.data.gresource.xml  org.redvulps.nandu.desktop.in  org.redvulps.nandu.gschema.xml  org.redvulps.nandu.metainfo.xml.in  setup-dialog.ui  styles.css  window.ui
data/dialogs/main/: main-dialog.ui
data/dialogs/main/containers/: containers-page.ui
data/dialogs/main/images/: image-detail.ui  images-page.ui
data/dialogs/main/networks/: networks-page.ui
data/dialogs/main/volumes/: volumes-page.ui
data/gtk/: help-overlay.ui
data/icons/: meson.build
gi-types/: gi.d.ts  glib-2.0.d.ts  harfbuzz-0.0.d.ts
po/: POTFILES.in  meson.build
scripts/: generate-types.sh  start.sh
src/: compose-detail.ts  compose-item.ts  container-item.ts  container-manager.ts  main.ts  meson.build  org.redvulps.nandu.src.gresource.xml  settings-manager.ts  setup-dialog.ts  window.ts
src/dialogs/main/: main-dialog.ts
src/dialogs/main/containers/: compose-detail.ts  container-item.ts  container-manager.ts  containers-page.ts
src/dialogs/main/images/: image-detail.ts  image-item.ts  images-page.ts
src/dialogs/main/networks/: networks-page.ts
src/dialogs/main/volumes/: volumes-page.ts
src/dialogs/setup/: setup-dialog.ts
src/docker/: client.ts  connection.ts  types.ts
src/docker/container/: disk-usage.ts  logs.ts  monitor.ts  mounts.ts  network.ts  summary.ts
src/models/: container-info.ts  image-info.ts
src/utils/: formatBytes.ts  formatDate.ts  truncateId.ts
types/: ambient.d.ts  gettext.d.ts
